# advent-of-code

./: .gitignore  README.md
2020/: README.md
2020/Guillaume Dion (oligocart)/: CMakeLists.txt
2020/Guillaume Dion (oligocart)/01/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/02/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/03/: toboggan.sql
2020/Guillaume Dion (oligocart)/04/: CMakeLists.txt  Passport.cpp  Passport.h  main.cpp
2020/Guillaume Dion (oligocart)/05/: boarding.sql
2020/Guillaume Dion (oligocart)/06/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/07/: Bags.cpp  Bags.h  CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/08/: BootCode.cpp  BootCode.h  CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/09/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/10/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/11/: CMakeLists.txt  Seats.cpp  Seats.h  main.cpp
2020/Guillaume Dion (oligocart)/12/: CMakeLists.txt  Coordinates.h  main.cpp
2020/Guillaume Dion (oligocart)/13/: CMakeLists.txt  main.cpp  version_constexpr.cpp
2020/Guillaume Dion (oligocart)/14/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/15/: CMakeLists.txt  main.cpp
2020/Guillaume Dion (oligocart)/16/: main.cpp
2020/Guillaume Dion (oligocart)/17/: Grid.cpp  Grid.h  Grid4D.cpp  Grid4D.h  main.cpp
2020/Guillaume Dion (oligocart)/18/: Operand.cpp  Operand.h  main.cpp
2020/Guillaume Dion (oligocart)/19/: main.cpp
2020/Guillaume Dion (oligocart)/20/: Tile.cpp  Tile.h  main.cpp
(+471 files in other folders)
